--- a/miniprogram/pages/home/pages/index/index.wxss
+++ b/miniprogram/pages/home/pages/index/index.wxss
@@ -1,7 +1,7 @@
 /*幻灯片*/
 .swiper-boxs { height: 200px; background: #F2F2F2; }
 .swiper-boxs-img { display: block; width: 100%; height: 200px; position: relative; }
-.swiper-boxs-img::before{ position: absolute; top: 0; bottom: 0; left: 0; right: 0; content: ''; background-image: linear-gradient(180deg, rgba(0,0,0,0.05) 5%,rgba(0,0,0,0.5) 100%);}
+.swiper-boxs-img::before{ position: absolute; top: 0; bottom: 0; left: 0; right: 0; content: ''; /*background-image: linear-gradient(180deg, rgba(0,0,0,0.05) 5%,rgba(0,0,0,0.5) 100%);*/}
 
 /* 日报 */
 .themes-box{ display: block; }
