--- a/miniprogram/pages/home/pages/detail/index.wxss
+++ b/miniprogram/pages/home/pages/detail/index.wxss
@@ -1,1 +1,3 @@
 @import "../../../../vendor/wxParse/wxParse.wxss";
+.ulist view{color:#333;border-bottom:1px solid #eee;overflow:hidden;margin-left:10px;margin-right:10px;padding-top:10px;padding-bottom:10px;line-height:24px;font-size: 14px;}
+.ulist view navigator{color:#333;display:block;/*font-size:1.125em;*/ }.ulist view:last-child{border-bottom:0}
