--- a/miniprogram/pages/home/pages/index/index.wxml
+++ b/miniprogram/pages/home/pages/index/index.wxml
@@ -1,23 +1,65 @@
+<view class="app">
 <swiper class="swiper-boxs" indicator-dots autoplay circular duration="300">
     <swiper-item wx:for="{{slideList}}" wx:key="unique">
-        <navigator url="../{{slideList[index].id}}">
-            <image model="aspectFit" style="width: {{windowWidth}}px;" class="swiper-boxs-img" src="{{slideList[index].pic}}" />
-        </navigator>
+        <image model="aspectFit" style="width: {{windowWidth}}px;" class="swiper-boxs-img" src="{{server}}{{slideList[index].url}}" />
     </swiper-item>
 </swiper>
-
-<!-- 产品中心 -->
-<!--
-<view class="banner_headline"><view class="title"><text class="htit">产品中心</text></view></view>
-<view class="page-section-spacing" style="margin-bottom:20px;">
-    <scroll-view class="scroll-view_H" scroll-x="true" style="width: 100%">
-        <view wx:for="{{goodsList}}" wx:key="unique" class="scroll-view-item_H demo-text-1">
-        <navigator url="../goodsdetail/index?id={{item.id}}">
-        <image style="width: 150px; height: 100px; background-color: #eeeeee;" src="{{item.litpic}}"></image></navigator></view>
-    </scroll-view>
-</view>
--->
+ <view class="menu">
+     <navigator redirect="true" url="../index/index">
+      <view class="item">
+        <view class="icon menu_bg_01">
+          <image src="/images/home.png"></image>
+        </view>
+        <text>首页</text>
+      </view>
+    </navigator>
+    <navigator redirect="true"  url="../depts/index">
+      <view class="item">
+        <view class="icon menu_bg_02">
+          <image src="/images/product.png"></image>
+        </view>
+        <text>科室信息</text>
+      </view>
+    </navigator>   
+    <navigator redirect="true"  url="../category/index">
+      <view class="item">
+        <view class="icon menu_bg_04">
+          <image src="/images/news.png"></image>
+        </view>
+        <text>新闻动态</text>
+      </view>
+    </navigator>
+    <navigator redirect="true"  url="../map/index">
+      <view class="item">
+        <view class="icon menu_bg_05">
+          <image src="/images/contact.png"></image>
+        </view>
+        <text>联系我们</text>
+      </view>
+    </navigator>
+    
+  </view>
+  <view class="block">
+    <view class="title">
+      <text>最新动态</text>
+    </view>
+    <view class="themes-list mb10">
+    <view class="themes-list-box" wx:for="{{newsList}}" wx:key="unique">
+        <navigator url="../detail/index?id={{item.id}}">
+            <view wx:if="{{item.image != ''}}" class="themes-list-thumbnail">
+                <image class="themes-list-img" src="{{server}}{{item.image}}" />
+            </view>
+            <view class="themes-list-main">
+                <view class="themes-list-name">{{item.title}}</view>
+                <view class="themes-list-description">{{item.description}}</view>
+            </view>
+        </navigator>
+    </view>
+  </view> 
+    
+  </view>
 <!-- 图文列表 -->
+<!--
 <view class="block-tit">最新动态</view>
 <view class="themes-list mb10">
     <view class="themes-list-box" wx:for="{{newsList}}" wx:key="unique">
@@ -39,7 +81,7 @@
 <navigator wx:if="{{item.litpic != ''}}" class="gpic" url="../detail/index?id={{item.id}}"><image src="{{item.litpic}}"></image></navigator>
 <navigator url="../detail/index?id={{item.id}}">{{item.title}}</navigator>
 </view></view>
-
+-->
 <!-- <view class="hot-main">
     <view class="hot-main-box">
         <view class="hot-main-title">精选</view>
@@ -72,3 +114,4 @@
     <text>{{intro}}</text>
 </view>
 -->
+</view>
