--- a/miniprogram/pages/home/pages/category/index.wxml
+++ b/miniprogram/pages/home/pages/category/index.wxml
@@ -1,14 +1,24 @@
 <!-- 图文列表 -->
+
+<view class="swiper-tab" >
+  <view class="swiper-tab-item" wx:for="{{lanmuList}}" wx:key="unique"> 
+    <view class="{{currentTab==lanmuList[index].id?'active':''}}" data-current="{{lanmuList[index].id}}" bindtap="clickTab">{{lanmuList[index].name}}</view>   
+    </view>
+</view>
+
+<swiper current="{{currentTab}}" duration="300"  bindchange="swiperTab" >
+    
+
 <scroll-view style="height:{{windowHeight}}" class="page_list" scroll-y="true" bindscrolltolower="loadMore" bindscrolltoupper="refresh">
     <view class="themes-list mb10">
-        <view class="themes-list-box" wx:for="{{dataList}}" wx:key="index">
+        <view class="themes-list-box" wx:for="{{newsList}}" wx:key="index">
             <navigator url="../detail/index?id={{item.id}}">
-                <view wx:if="{{item.litpic != ''}}" class="themes-list-thumbnail">
-                    <image class="themes-list-img" src="{{item.litpic}}" />
-                </view>
+                <view wx:if="{{item.image != ''}}" class="themes-list-thumbnail">
+                    <image class="themes-list-img" src="{{server}}{{item.image}}" />
+                </view> 
                 <view class="themes-list-main">
-                    <view class="themes-list-name">{{item.title}}</view>
-                    <view class="themes-list-description">{{item.description}}</view>
+                     <view class="themes-list-name">{{item.title}}</view>
+                <view class="themes-list-description">{{item.description}}</view>
                 </view>
             </navigator>
         </view>
@@ -21,4 +31,5 @@
         <view wx:else><text>没有更多内容了</text></view>
     </view>
 </scroll-view>
+</swiper>
 <loading hidden="{{loading}}">加载中...</loading>
