--- a/miniprogram/pages/home/pages/doctors/detail.wxml
+++ b/miniprogram/pages/home/pages/doctors/detail.wxml
@@ -10,8 +10,8 @@
       
     <view class='name'>{{name}}</view>
     <view class='hinfo'>
-      <view class='lt'>临床科室：{{deptName}}</view>
-      <view class='rt'>推荐指数：5.0</view>
+      <view class='lt'>所属机构：{{deptName}}</view>
+      <view class='rt'>职称：{{title}}</view>
     </view>
   </view>
 
