--- a/miniprogram/pages/home/pages/hospital/index.wxss
+++ b/miniprogram/pages/home/pages/hospital/index.wxss
@@ -3,7 +3,7 @@
 .themes-list-thumbnail{width: 40px;height: 40px;float: left;margin-right: 12px;}
 .themes-list-img{width: 40px;height: 40px;border-radius:2px; border: 1px solid #F2F2F2;}
 
-.themes-list-name{ font-size: 16px; color: #444; height: 20px; line-height: 20px; overflow: hidden; }
+.themes-list-name{ font-size: 16px; color: #444; height: 40px;vertical-align:middle; display: table-cell; line-height: 20px; overflow: hidden; }
 .themes-list-description{ font-size: 12px; color: #999; height: 20px; line-height: 20px; overflow: hidden; }
 
 .page_list {
