--- a/miniprogram/pages/home/pages/doctors/detail.wxml
+++ b/miniprogram/pages/home/pages/doctors/detail.wxml
@@ -18,7 +18,7 @@
   <view class='content'>
     <view class='col'>
       <view class='title'>
-        医生简介
+        专家简介
       </view>
       <view class='info'>
         <text>{{remarks}}</text>
