--- a/miniprogram/pages/home/pages/index/index.wxml
+++ b/miniprogram/pages/home/pages/index/index.wxml
@@ -27,7 +27,7 @@
         <view class="icon menu_bg_02">
           <image src="/images/product.png"></image>
         </view>
-        <text>医生信息</text>
+        <text>专家信息</text>
       </view>
     </navigator>   
     <navigator open-type='reLaunch'  url="/pages/home/pages/map/index">
