--- a/miniprogram/pages/home/pages/category/index.wxml
+++ b/miniprogram/pages/home/pages/category/index.wxml
@@ -5,6 +5,10 @@
     <view class="{{currentTab==lanmuList[index].id?'active':''}}" data-current="{{lanmuList[index].id}}" bindtap="clickTab">{{lanmuList[index].name}}</view>   
     </view>
 </view>
+<view class="tips" hidden="{{hideHeader}}">
+  <view>下拉刷新中……</view>
+  <view>{{refreshTime}}</view>
+</view>
 <scroll-view style="height:{{windowHeight}}px" class="page_list" scroll-y="true" bindscrolltolower="loadMore" bindscrolltoupper="refresh">
     <view class="themes-list mb10">
         <view class="themes-list-box" wx:for="{{newsList}}" wx:key="index">
@@ -18,14 +22,10 @@
             </view>
             </navigator>
         </view>
-    </view>
-    <view class="tips">
-        <view wx:if="{{hasMore}}">
-            <image src="../../../../images/loading.gif" mode="aspectFill"/>
-            <text>玩了命的加载中...</text>
-        </view>
-        <view wx:else><text>没有更多内容了</text></view>
-    </view>
+    </view>    
 </scroll-view>
 
-<loading hidden="{{loading}}">加载中...</loading>
+<view class="tips" hidden="{{hideBottom}}">
+  <view>{{loadMoreData}}</view>
+  <view>{{refreshTime}}</view>
+</view>
