--- a/miniprogram/pages/home/pages/doctors/index.wxml
+++ b/miniprogram/pages/home/pages/doctors/index.wxml
@@ -1,4 +1,8 @@
-<scroll-view style="height:{{windowHeight}}" class="page_list" scroll-y="true" bindscrolltolower="loadMore" bindscrolltoupper="refresh">
+<view class="tips" hidden="{{hideHeader}}">
+  <view>下拉刷新中……</view>
+  <view>{{refreshTime}}</view>
+</view>
+<scroll-view style="height:{{windowHeight}}px" class="page_list" scroll-y="true" bindscrolltolower="loadMore" bindscrolltoupper="refresh">
     <view class="themes-list mb10">
         <view class="themes-list-box" wx:for="{{doctorsList}}" wx:key="index">
             <navigator url="detail?id={{item.id}}">
@@ -14,14 +18,9 @@
             </view>
             </navigator>
         </view>
-    </view>
-    <view class="tips">
-        <view wx:if="{{hasMore}}">
-            <image src="../../../../images/loading.gif" mode="aspectFill"/>
-            <text>玩了命的加载中...</text>
-        </view>
-        <view wx:else><text>没有更多内容了</text></view>
-    </view>
+    </view>   
 </scroll-view>
-
-<loading hidden="{{loading}}">加载中...</loading>
+<view class="tips" hidden="{{hideBottom}}">
+  <view>{{loadMoreData}}</view>
+  <view>{{refreshTime}}</view>
+</view>
