--- a/miniprogram/pages/home/pages/map/index.wxml
+++ b/miniprogram/pages/home/pages/map/index.wxml
@@ -7,6 +7,6 @@
     <view><text style="color:#999;">联系人：</text>{{contact}}</view>
     <view><text style="color:#999;">电子邮箱：</text>{{email}}</view>
     <view bindtap="makePhoneCall"><text style="color:#999;">联系方式：</text>{{mobile}}</view>
-    <view><navigator url="../map/index"><text style="color:#999;">地址：</text>{{address}}</navigator></view>
+    <view bindtap="makenav"><navigator url="../map/index"><text style="color:#999;">地址：</text>{{address}}</navigator></view>
 </view>
 </view>
